<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/levelsLabel"/>
	<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
    >
        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:id="@+id/levelButton1"
                android:text="@string/level1Button"/>
        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:id="@+id/levelButton2"
                android:text="@string/level2Button"/>
        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:id="@+id/levelButton3"
                android:text="@string/level3Button"/>
        <Button android:layout_width="wrap_content" android:layout_height="match_parent"
                android:id="@+id/levelButton4"
                android:text="@string/level4Button"/>
	</LinearLayout>
</LinearLayout>